Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20289

cmake filter (incorrect switch between readonly and editable modes)

    XMLWordPrintable

Details

    • b1a421bf2d7bb43e0c60e676c5e24bb08a3db682 (qt-creator/qt-creator/master)

    Description

      Hi,

      for cmake project, the "Filter" field to filter cmake variables is bugged.

      As soon as the cmake configuration is running, it becomes no longer editable.

      But if the cmake configuration failed, it remains non-editable. So if a filter was already typed-in, you cannot erase it anymore, so you are not able to change non-visible (filtered) variables, so you cannot fix your configuration...

      In that state, if you run a generation again, the Filter filed switches editable while generating, but switches back to non-editable as soon as the generation terminated.

      Thanks.

       

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-20289
        # Subject Branch Project Status CR V

        Activity

          People

            hunger Tobias Hunger
            mattn mattn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes