cmake: do not change filter line edit state in case cmake parsing fails

Fixes: QTCREATORBUG-20289
Change-Id: I920c6fe977dd645f4685d2b0ea398ce91e63ab91
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>